EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------

==10/19/2008
Angelox: Added a start to Bot tracking - Thanks Derision for all the help and know-how. 
Derision: Altered damage shield message processing to be more like (the same?) as live.
Derision: If it exists, damage shield types are read from a new table (damageshieldtypes)
Derision: If no entry exists in the table, a default based on resist type is used.

Optional SQL: See utils/sql/damageshieldtypes.sql

==10/18/2008
KLS: Reworked classic style traps.
KLS: Debuff style traps should function perfectly, the level field in the DB gives what level the caster is for resists in this case.
KLS: Added respawn and respawn variance to traps.
KLS: Increased range on sense traps.
KLS: Sense trap will now point the player in the direction of the trap they are sensing.
KLS: Disarm trap will no longer use sense trap's timer.
KLS: Disarm trap will no longer fail to disarm traps on success.
KLS: Increased range on disarm trap slightly.
KLS: Change to MakeRandomInt() and MakeRandomFloat()
KLS: Int generation be nearly 100% or more faster in most cases and float generation should be slightly faster in most cases
cavedude00: (seveianrex) Slay Undead Fix 
cavedude00: (seveianrex) Levitate effect will no longer be removed in cases where you have two stacked lev spells and the first wears off. 
cavedude00: (seveianrex) Hate list will now be cleared following CoH
cavedude00: (seveianrex) Group members will now see tradeskill emotes. 

Required SQL:
ALTER TABLE `traps` DROP `spawnchance`;
ALTER TABLE `traps` ADD `respawn_time` INT(11) UNSIGNED DEFAULT '60' NOT NULL AFTER `skill`;
ALTER TABLE `traps` ADD `level` MEDIUMINT(4) UNSIGNED DEFAULT '1' NOT NULL AFTER `skill`;
ALTER TABLE `traps` ADD `respawn_var` INT(11) UNSIGNED DEFAULT '0' NOT NULL AFTER `respawn_time`;

==10/17/2008
KLS: Tweaks to /pet attack