@@ -1,0 +1,2 @@
+insert into rule_values values (0, 'Chat:ServerWideOOC', 'true');
+insert into rule_values values (0, 'Chat:ServerWideAuction', 'true');
