@@ -1,0 +1,1 @@
+insert into rule_values values (0,'World:ClearTempMerchantlist','true');
