@@ -1,0 +1,2 @@
+Insert into rule_values values (0, 'World:AddMaxClientsPerIP', -1 );
+Insert into rule_values values (0, 'World:AddMaxClientsStatus', -1 );
