@@ -1,0 +1,2 @@
+ALTER TABLE `tasks` ADD `minlevel` TINYINT UNSIGNED NOT NULL DEFAULT '0',
+ADD `maxlevel` TINYINT UNSIGNED NOT NULL DEFAULT '0';
